--- a/src/App.css
+++ b/src/App.css
@@ -6,10 +6,10 @@
 
 body{
   font-size: 100%;
+  background-color: cyan;
 }
 
 .time-container{
-  background-color: aqua;
   width: 100vw;
   height: 100vh;
 }
@@ -46,7 +46,7 @@ h2{
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   margin-top: 3em;
-  padding: 3em;
+  padding: 1em;
   text-align: center;
   font-size: 30px;
 }
@@ -63,3 +63,8 @@ h2{
 .counter{
   font-size: 20px;
 }
+
+div{
+  text-align: center;
+}
+
